# booking-service/api/swagger.json
@@ -30,7 +30,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.NewReservationDto"
                         }
                     },
                     "400": {
@@ -167,13 +167,13 @@
                 "clientEmail": {
                     "type": "string"
                 },
-                "clientName": {
+                "clientFirstName": {
+                    "type": "string"
+                },
+                "clientLastName": {
                     "type": "string"
                 },
                 "clientPhone": {
-                    "type": "string"
-                },
-                "clientSurname": {
                     "type": "string"
                 },
                 "inTime": {
@@ -187,19 +187,30 @@
                 }
             }
         },
+        "handlers.NewReservationDto": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "paymentUrl": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.ReservationDto": {
             "type": "object",
             "properties": {
                 "clientEmail": {
                     "type": "string"
                 },
-                "clientName": {
+                "clientFirstName": {
+                    "type": "string"
+                },
+                "clientLastName": {
                     "type": "string"
                 },
                 "clientPhone": {
-                    "type": "string"
-                },
-                "clientSurname": {
                     "type": "string"
                 },
                 "cost": {
